# TinyMUD

./: .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  ASSETS_LICENSES.md  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  CONTRIBUTING.md  ChatUI.tscn  LICENSE  OptionsMenu.tscn  PRIORITY_1_SUMMARY.md  README.md  ROBUSTNESS_IMPROVEMENTS.md  SECURITY.md  dummy_path  export_presets.cfg  game.tscn  icon.svg.import  mission_system_plan.md  mypy.ini  project.godot  pyproject.toml  requirements.txt  test_out.txt  test_state.json  verify_help.py
.agent/workflows/: add-command.md  add-npc-action.md  run-coverage.md  run-server.md  run-tests.md
.github/: copilot-instructions.md
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
assets/tilesets/: ascii_atlas.tres
docs/: Radiant-AI-Reimagined-Game-Design.md  TinyMUD Coding Guidelines.md  adding-characters.md  adding-locations.md  architecture.md  blueprint.md  combat-system.md  deploy-gce.md  goap-ai.md  goap-state-management-implementation.md  inventory-integrity-improvements.md  minimal viable product timeline.md  npc-generate-command.md  persistence-refactoring.md  relationship-permission-security-findings.md  service-contract-audit.md  service-contract-implementation-plan.md  service-contract-progress.md  service-contract-quick-ref.md  service-contract-summary.md  world-schema-migrations.md  world-validation-implementation.md
docs/.obsidian/: workspace.json
server/: MOCK_AI_README.md  SAFE_CALL_README.md  account_service.py  admin_router.py  admin_service.py  ai_utils.py  ambition_model.py  ambition_service.py  ascii_art.py  auth_router.py  auth_router_new.py  auth_wizard_service.py  autonomous_npc_service.py  central_router.py  centralization_demo.py  combat_router.py  combat_service.py  command_context.py  command_registry.py  concurrency_utils.py  conftest.py  constants.py  daily_system.py  debounced_saver.py  demo_enhanced_ai.py  demo_enhanced_npcs.py  dialogue_router.py  dialogue_utils.py  dice_router.py  dice_smoke.py  dice_utils.py  event_handlers.py  faction_service.py  game_loop.py  goap_state_manager.py  help_service.py  hourly_descriptions_temp.py  id_parse_utils.py  interaction_router.py  interaction_service.py  (+91 more)
server/routers/: admin_router.py
src/: api_client.gd  api_client.gd.uid  chat_ui.gd  chat_ui.gd.uid  options_menu.gd  options_menu.gd.uid  socket_io_client.gd  socket_io_client.gd.uid
src/assets/fonts/: PerfectDOSVGA437.ttf.import
src/assets/tilesets/: ascii sprite sheet.png.import  entity sprite sheet.png.import  entity_atlas.tres
src/core/commands/: CommandParser.gd  CommandParser.gd.uid
src/core/game/: game.gd  game.gd.uid
src/core/networking/: NetworkManager.gd  NetworkManager.gd.uid
src/core/world/: WorldDB.gd  WorldDB.gd.uid
src/features/items/: item_resource.gd  item_resource.gd.uid
src/features/items/definitions/: mug.tres  sword.tres
src/features/player/: player.gd  player.gd.uid  player.tres  player.tscn  player_data.gd  player_data.gd.uid  player_resource.gd  player_resource.gd.uid
src/features/ui/: MapView.tscn  main_menu.gd  main_menu.gd.uid  main_menu.tscn  main_ui.gd  main_ui.gd.uid  main_ui.tscn  map_view.gd  map_view.gd.uid  map_view.tscn
src/features/world/: room_resource.gd  room_resource.gd.uid
src/features/world/definitions/: dungeon.tres  inn.tres  townsquare.tres
